--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email:nepal.rupak@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: https://github.com/rupak-nepal
   instagram:
-  linkedin:
+  linkedin:https://www.linkedin.com/in/rupak-nepal
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
