--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Rupak Nepal
 
 # Short bio or description (displayed in the header)
-description: Software Engineer/Java Developer/FullStack Developer
+description: Senior Software Engineer/Server Side Engineer/Java Developer/FullStack Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url:https://rupaknepal.blogspot.com/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
